# audit_agent

./: .env.example  .gitignore  README.md  REFACTOR_SUMMARY.md  audit_system.py  calculation_tools.py  generate_report.py  pyproject.toml  report_generator.py  requirements.txt  security_check.py
agents/: __init__.py  gemini_agent.py  ollama_agent.py
core/: __init__.py  base_agent.py  config.py  tool_orchestrator.py  utils.py
input/: AALI_arus_kas.txt  AALI_laba_rugi.txt  AALI_posisi_keuangan.txt  ABBA_arus_kas.txt  ABBA_laba_rugi.txt  ABBA_posisi_keuangan.txt  ABDA_arus_kas.txt  ABDA_laba_rugi.txt  ABDA_posisi_keuangan.txt  ABMM_arus_kas.txt  ABMM_laba_rugi.txt  ABMM_posisi_keuangan.txt
results/: AALI_gemini_triple_agent_results.json  AALI_ollama_audit_results.json
