[project]
name = "api-footing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.30.0",
    "langchain-google-genai>=2.1.9",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.5",
    "matplotlib>=3.10.5",
    "python-dotenv>=1.1.1",
]
